--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ permalink: /:title/
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
-  shortname: jf_personal_site # enter this from your disqus account
+  shortname: jf-personal-site # enter this from your disqus account
   categories: [tech] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
