--- a/_config.yml
+++ b/_config.yml
@@ -34,15 +34,15 @@ permalink: /:title/
 # if you don't want comments in your posts, leave categories empty
 disqus:
   shortname: jf-personal-site # enter this from your disqus account
-  categories: [tech] # only show disqus for posts that have these categories
+  categories: [project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: Jianfeng Wang
+#facebook: profile.php?id=100010194227441
 #twitter: mytwitter
 # google: mygoogle
 instagram: jianfeng_paul
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: jianfeng-paul-wang-291a35129/
 # youtube: myyoutube
 # spotify: myspotify
 github: jwangee
