--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Jianfeng Wang
-bio: A Network Problem Solver for Data Centers
+bio: A PhD Student in Computer Networks
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -18,18 +18,18 @@ resume: true
 resume-external: true
 resume-url: https://www.google.com/
 
-url: https://jwangee.github.io
 #url: 127.0.0.1:4000
 # your url: http://USERNAME.github.io
+url: https://jwangee.github.io
 
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
+analytics-google: 'UA-MYANALYTICS'
 
 # To enable piwik tracking, supply your url & site ID below
-# analytics-piwik-url: 'piwik.my-host.com'
-# analytics-piwik-id: 1
+analytics-piwik-url: 'piwik.my-host.com'
+analytics-piwik-id: 1
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
@@ -57,7 +57,7 @@ email: jianfenw@usc.edu
 authors:
     Jianfeng:
         name: Jianfeng Wang
-        bio: A Network Problem Solver for Data Centers
+        bio: Researcher
         external-image: true
         picture: /assets/images/head_profile.jpg
         instagram: jianfeng_paul
@@ -68,7 +68,7 @@ authors:
 width: normal
 
 # if you don't need pagination, comment the *paginate* configs below
-paginate: 6
+paginate: 10
 paginate_path: "_posts/:num/"
 
 # if you don't need projects, comment the *projects* configs below
