--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ picture: /assets/images/profile.jpg
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: www.google.com
+resume-url: /resume.html
 
 #url: 127.0.0.1:4000
 # your url: http://USERNAME.github.io
