--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ picture: /assets/images/profile.jpg
 # If you want to include your resume, set to true
 # and specify source (external or local).
 resume: true
-resume-external: true
+resume-external: false
 resume-url: /resume.html
 
 #url: 127.0.0.1:4000
