--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: A blog about technology and stuff related
 # This is for header /Home or /Projects
 external-image: false
 head_picture: /assets/images/head_profile.jpg
-picture: /assets/images/profile.jpg
+picture: /assets/images/profile_2.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
